--- a/Android/CobrowseIO.Droid/CobrowseIO.Droid.csproj
+++ b/Android/CobrowseIO.Droid/CobrowseIO.Droid.csproj
@@ -17,6 +17,9 @@
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <Description>https://github.com/cobrowseio/cobrowse-sdk-android-binary</Description>
+    <ReleaseVersion>2.1.1</ReleaseVersion>
+    <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
