--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -22,9 +22,14 @@
         <DefineConstants>DEBUG</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
-        <MtouchArch>x86_64</MtouchArch>
+        <MtouchArch>i386, x86_64</MtouchArch>
         <MtouchLink>None</MtouchLink>
         <MtouchDebug>true</MtouchDebug>
+        <!--
+        Xamarin.Swift fails when Device-specific builds are enabled 
+        https://github.com/Flash3001/Xamarin.Swift/issues/29#issuecomment-583770924    
+        -->
+        <DeviceSpecificBuild>false</DeviceSpecificBuild>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
         <DebugType>none</DebugType>
@@ -47,6 +52,7 @@
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
         <CodesignKey>iPhone Developer</CodesignKey>
         <MtouchDebug>true</MtouchDebug>
+        <DeviceSpecificBuild>false</DeviceSpecificBuild>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
         <DebugType>none</DebugType>
@@ -147,6 +153,9 @@
     <ItemGroup>
       <PackageReference Include="Xamarin.Build.Download">
         <Version>0.8.0</Version>
+      </PackageReference>
+      <PackageReference Include="Xamarin.Swift">
+        <Version>1.0.4</Version>
       </PackageReference>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
