Finish bindings for CobrowseIOAppExtension.framework.

--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -30,6 +30,7 @@
         https://github.com/Flash3001/Xamarin.Swift/issues/29#issuecomment-583770924    
         -->
         <DeviceSpecificBuild>false</DeviceSpecificBuild>
+        <CodesignKey>iPhone Developer</CodesignKey>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
         <DebugType>none</DebugType>
@@ -141,13 +142,18 @@
         <Project>{42D519FB-6597-4CFE-A2B5-9F57BADBE925}</Project>
         <Name>CobrowseIO.iOS</Name>
       </ProjectReference>
+      <ProjectReference Include="..\..\iOS\SwiftCBOR.iOS\SwiftCBOR.iOS.csproj">
+        <Project>{89690D1D-E492-4302-A262-1125807A9CF7}</Project>
+        <Name>SwiftCBOR.iOS</Name>
+      </ProjectReference>
       <ProjectReference Include="..\..\iOS\Starscream.iOS\Starscream.iOS.csproj">
         <Project>{E19A722D-20E3-4255-8600-F10EFEFBAC16}</Project>
         <Name>Starscream.iOS</Name>
       </ProjectReference>
-      <ProjectReference Include="..\..\iOS\SwiftCBOR.iOS\SwiftCBOR.iOS.csproj">
-        <Project>{89690D1D-E492-4302-A262-1125807A9CF7}</Project>
-        <Name>SwiftCBOR.iOS</Name>
+      <ProjectReference Include="..\SampleApp.iOS.BroadcastUploadExtension\SampleApp.iOS.BroadcastUploadExtension.csproj">
+        <IsAppExtension>true</IsAppExtension>
+        <Project>{146D2039-84E1-428F-8020-23BA03B56795}</Project>
+        <Name>SampleApp.iOS.BroadcastUploadExtension</Name>
       </ProjectReference>
     </ItemGroup>
     <ItemGroup>
