--- a/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
+++ b/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
@@ -38,16 +38,13 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
   </ItemGroup>
   <ItemGroup>
-    <NativeReference Include="..\CobrowseIO.iOS\CobrowseIO.framework">
+    <NativeReference Include="CobrowseIOAppExtension.framework">
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
     </NativeReference>
