Add CobrowseAccessibilityService usage example.

--- a/Sample/SampleApp.Droid/SampleApp.Droid.csproj
+++ b/Sample/SampleApp.Droid/SampleApp.Droid.csproj
@@ -102,6 +102,10 @@
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
+    <AndroidResource Include="Resources\values\bools.xml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
