--- a/Android/CborJava.Droid/CborJava.Droid.csproj
+++ b/Android/CborJava.Droid/CborJava.Droid.csproj
@@ -64,6 +64,9 @@
       <Name>NumbersJava.Droid</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <JavaSourceJar Include="Jars\cbor-4.0.1-sources.jar" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
