--- a/SampleForms/SampleApp.Forms.Droid/SampleApp.Forms.Droid.csproj
+++ b/SampleForms/SampleApp.Forms.Droid/SampleApp.Forms.Droid.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Build.Download">
+      <Version>0.8.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
