--- a/Sample/SampleApp.iOS.BroadcastUploadExtension/Info.plist
+++ b/Sample/SampleApp.iOS.BroadcastUploadExtension/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>SampleApp.iOS.BroadcastUploadExtension</string>
+	<string>Cobrowse Full-Device</string>
 	<key>CFBundleName</key>
 	<string>SampleApp.iOS.BroadcastUploadExtension</string>
 	<key>CFBundleIdentifier</key>
@@ -19,7 +19,7 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>MinimumOSVersion</key>
-	<string>10.0</string>
+	<string>11.0</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
