--- a/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
+++ b/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LinkerPleaseInclude.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -48,6 +49,16 @@
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
     </NativeReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Starscream.iOS\Starscream.iOS.csproj">
+      <Project>{E19A722D-20E3-4255-8600-F10EFEFBAC16}</Project>
+      <Name>Starscream.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SwiftCBOR.iOS\SwiftCBOR.iOS.csproj">
+      <Project>{89690D1D-E492-4302-A262-1125807A9CF7}</Project>
+      <Name>SwiftCBOR.iOS</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
