--- a/SampleForms/SampleApp.Forms.Droid/SampleApp.Forms.Droid.csproj
+++ b/SampleForms/SampleApp.Forms.Droid/SampleApp.Forms.Droid.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CobrowseAdapter.cs" />
     <Compile Include="MainApplication.cs" />
+    <Compile Include="PlatformCobrowseRedactedViewEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
