--- a/Sample/SampleApp.Droid/SampleApp.Droid.csproj
+++ b/Sample/SampleApp.Droid/SampleApp.Droid.csproj
@@ -59,10 +59,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.AndroidX.Core">
-      <Version>1.1.0-rc3</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.1.0-rc3</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Build.Download">
       <Version>0.8.0</Version>
