--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -5,20 +5,20 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{442C6F83-FEC1-4CED-A374-3953721D7C13}</ProjectGuid>
+    <ProjectGuid>{C6ED4775-5505-4166-B973-D0C88830D32B}</ProjectGuid>
     <ProjectTypeGuids>{10368E6C-D01B-4462-8E8B-01FC667A7035};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{77efb91c-a7e9-4b0e-a7c5-31eeec3c6d46}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CborJava.Droid</RootNamespace>
-    <AssemblyName>CborJava.Droid</AssemblyName>
+    <RootNamespace>CobrowseIO.Android</RootNamespace>
+    <AssemblyName>CobrowseIO.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-    <Description>https://github.com/peteroupc/CBOR-Java</Description>
-    <ReleaseVersion>4.0.1</ReleaseVersion>
+    <Description>https://github.com/cobrowseio/cobrowse-sdk-android-binary</Description>
+    <ReleaseVersion>2.2.0</ReleaseVersion>
     <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -56,16 +56,27 @@
     <TransformFile Include="Transforms\EnumMethods.xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedJar Include="Jars\cbor-4.0.1.jar" />
+    <PackageReference Include="Xamarin.AndroidX.Core">
+      <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.AppCompat">
+      <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout">
+      <Version>1.1.3</Version>
+    </PackageReference>
+    <PackageReference Include="Square.OkHttp3">
+      <Version>3.12.6</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NumbersJava.Droid\NumbersJava.Droid.csproj">
-      <Project>{CA05EE40-B53A-4284-99E3-4257304D025A}</Project>
-      <Name>NumbersJava.Droid</Name>
+    <ProjectReference Include="..\CborJava.Android\CborJava.Android.csproj">
+      <Project>{442C6F83-FEC1-4CED-A374-3953721D7C13}</Project>
+      <Name>CborJava.Android</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <JavaSourceJar Include="Jars\cbor-4.0.1-sources.jar" />
+    <LibraryProjectZip Include="Jars\cobrowse-sdk-android-2.2.0.aar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
