--- a/Android/NumbersJava.Android/NumbersJava.Android.csproj
+++ b/Android/NumbersJava.Android/NumbersJava.Android.csproj
@@ -10,8 +10,8 @@
     <TemplateGuid>{77efb91c-a7e9-4b0e-a7c5-31eeec3c6d46}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NumbersJava.Droid</RootNamespace>
-    <AssemblyName>NumbersJava.Droid</AssemblyName>
+    <RootNamespace>NumbersJava.Android</RootNamespace>
+    <AssemblyName>NumbersJava.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidClassParser>class-parse</AndroidClassParser>
