--- a/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
+++ b/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
@@ -7,8 +7,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SampleApp.Forms.Droid</RootNamespace>
-    <AssemblyName>SampleApp.Forms.Droid</AssemblyName>
+    <RootNamespace>SampleApp.Forms.Android</RootNamespace>
+    <AssemblyName>SampleApp.Forms.Android</AssemblyName>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -103,17 +103,17 @@
       <Project>{28C2AABA-55D8-47E3-9404-1C9C13BFC8E9}</Project>
       <Name>SampleApp.Forms</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Android\CobrowseIO.Droid\CobrowseIO.Droid.csproj">
+    <ProjectReference Include="..\..\Android\CobrowseIO.Android\CobrowseIO.Android.csproj">
       <Project>{C6ED4775-5505-4166-B973-D0C88830D32B}</Project>
-      <Name>CobrowseIO.Droid</Name>
+      <Name>CobrowseIO.Android</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Android\CborJava.Droid\CborJava.Droid.csproj">
+    <ProjectReference Include="..\..\Android\CborJava.Android\CborJava.Android.csproj">
       <Project>{442C6F83-FEC1-4CED-A374-3953721D7C13}</Project>
-      <Name>CborJava.Droid</Name>
+      <Name>CborJava.Android</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Android\NumbersJava.Droid\NumbersJava.Droid.csproj">
+    <ProjectReference Include="..\..\Android\NumbersJava.Android\NumbersJava.Android.csproj">
       <Project>{CA05EE40-B53A-4284-99E3-4257304D025A}</Project>
-      <Name>NumbersJava.Droid</Name>
+      <Name>NumbersJava.Android</Name>
     </ProjectReference>
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
