Configure NuGet to use a private Azure DevOps feed.

--- a/NuGet.config
+++ b/NuGet.config
@@ -6,7 +6,7 @@
   </packageRestore>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="LocalPackages" value="LocalPackages" />
+    <add key="cobrowse-nuget-feed" value="https://pkgs.dev.azure.com/cobrowse-xamarin-sdk/cobrowse-xamarin-sdk-nuget/_packaging/cobrowse-nuget-feed/nuget/v3/index.json" />
   </packageSources>
   <bindingRedirects>
     <add key="skip" value="False" />
@@ -15,4 +15,14 @@
     <add key="format" value="0" />
     <add key="disabled" value="False" />
   </packageManagement>
+  <packageSourceCredentials>
+    <cobrowse-nuget-feed>
+      <!--
+        Generate a new token and put it here
+        https://dev.azure.com/cobrowse-xamarin-sdk/_usersSettings/tokens    
+      -->
+      <add key="Username" value="user" />
+      <add key="ClearTextPassword" value="INSERT_TOKEN_VALUE" />
+    </cobrowse-nuget-feed>
+  </packageSourceCredentials>
 </configuration>
