--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -135,23 +135,14 @@
     <PackageReference Include="Xamarin.Build.Download">
       <Version>0.8.0</Version>
     </PackageReference>
+    <PackageReference Include="CobrowseIO.iOS">
+      <Version>2.4.0-pre1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SampleApp.Forms\SampleApp.Forms.csproj">
       <Project>{28C2AABA-55D8-47E3-9404-1C9C13BFC8E9}</Project>
       <Name>SampleApp.Forms</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\iOS\SwiftCBOR.iOS\SwiftCBOR.iOS.csproj">
-      <Project>{89690D1D-E492-4302-A262-1125807A9CF7}</Project>
-      <Name>SwiftCBOR.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\iOS\Starscream.iOS\Starscream.iOS.csproj">
-      <Project>{E19A722D-20E3-4255-8600-F10EFEFBAC16}</Project>
-      <Name>Starscream.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\iOS\CobrowseIO.iOS\CobrowseIO.iOS.csproj">
-      <Project>{42D519FB-6597-4CFE-A2B5-9F57BADBE925}</Project>
-      <Name>CobrowseIO.iOS</Name>
     </ProjectReference>
     <ProjectReference Include="..\SampleFormsApp.iOS.BroadcastUploadExtension\SampleFormsApp.iOS.BroadcastUploadExtension.csproj">
       <IsAppExtension>true</IsAppExtension>
