--- a/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
+++ b/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
@@ -52,12 +52,12 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.282-pre4" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Build.Download">
-      <Version>0.8.0</Version>
+      <Version>0.9.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.Android">
       <Version>2.2.0-pre1</Version>
