--- a/SampleForms/SampleApp.Forms/SampleApp.Forms.csproj
+++ b/SampleForms/SampleApp.Forms/SampleApp.Forms.csproj
@@ -11,6 +11,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.282-pre4" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
   </ItemGroup>
 </Project>
