Implement using the latest available Cobrowse.io SDK (AAR and iOS frameworks) (#3).

--- a/.gitignore
+++ b/.gitignore
@@ -407,3 +407,8 @@ ASALocalRun/
 # Unused Xcode builds
 Release-iphoneos
 Release-iphonesimulator
+
+
+# Cake Build related
+tools/**
+!tools/packages.config
