--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -151,6 +151,9 @@
       <PackageReference Include="CobrowseIO.iOS">
         <Version>2.4.0-pre2</Version>
       </PackageReference>
+      <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
+        <Version>0.2.0</Version>
+      </PackageReference>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
