--- a/CobrowseIO.iOS.nuspec
+++ b/CobrowseIO.iOS.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata minClientVersion="2.8.1">
         <id>CobrowseIO.iOS</id>
-        <version>2.4.0-pre2</version>
+        <version>2.4.0</version>
         <title>CobrowseIO.iOS</title>
         <authors>Cobrowse.io</authors>
         <owners>Cobrowse.io</owners>
@@ -15,8 +15,8 @@
         <tags>xamarin, ios</tags>
         <dependencies>
             <group targetFramework="Xamarin.iOS10">
-                <dependency id="Starscream.iOS" version="3.1.1-pre1" />
-                <dependency id="SwiftCBOR.iOS" version="0.4.3-pre1" />
+                <dependency id="Starscream.iOS" version="3.1.1" />
+                <dependency id="SwiftCBOR.iOS" version="0.4.3" />
             </group>
         </dependencies>
     </metadata>
