--- a/NumbersJava.Android.nuspec
+++ b/NumbersJava.Android.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata minClientVersion="2.8.1">
         <id>NumbersJava.Android</id>
-        <version>1.4.3-pre1</version>
+        <version>1.4.3</version>
         <title>NumbersJava.Android</title>
         <authors>Cobrowse.io</authors>
         <owners>Cobrowse.io</owners>
