--- a/Sample/SampleApp.Android/SampleApp.Android.csproj
+++ b/Sample/SampleApp.Android/SampleApp.Android.csproj
@@ -68,7 +68,7 @@
       <Version>0.10.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.Android">
-      <Version>2.2.0-pre1</Version>
+      <Version>2.2.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
