--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -149,7 +149,7 @@
         <Version>0.10.0</Version>
       </PackageReference>
       <PackageReference Include="CobrowseIO.iOS">
-        <Version>2.4.0-pre2</Version>
+        <Version>2.4.0</Version>
       </PackageReference>
       <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
         <Version>0.2.0</Version>
