--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -136,7 +136,7 @@
       <Version>0.10.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.iOS">
-      <Version>2.4.0-pre2</Version>
+      <Version>2.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
