--- a/SampleForms/SampleFormsApp.iOS.BroadcastUploadExtension/SampleFormsApp.iOS.BroadcastUploadExtension.csproj
+++ b/SampleForms/SampleFormsApp.iOS.BroadcastUploadExtension/SampleFormsApp.iOS.BroadcastUploadExtension.csproj
@@ -100,7 +100,7 @@
       <Version>0.10.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.AppExtension.iOS">
-      <Version>2.4.0-pre1</Version>
+      <Version>2.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.AppExtension.CSharp.targets" />
