Replace Xamarin.Swift with Xamarin.iOS.SwiftRuntimeSupport and enable device-specific builds.

--- a/Sample/SampleApp.iOS.BroadcastUploadExtension/SampleApp.iOS.BroadcastUploadExtension.csproj
+++ b/Sample/SampleApp.iOS.BroadcastUploadExtension/SampleApp.iOS.BroadcastUploadExtension.csproj
@@ -26,7 +26,7 @@
     <MtouchLink>None</MtouchLink>
     <MtouchArch>x86_64</MtouchArch>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
-    <DeviceSpecificBuild>false</DeviceSpecificBuild>
+    <DeviceSpecificBuild>true</DeviceSpecificBuild>
     <MtouchVerbosity></MtouchVerbosity>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
