--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -26,7 +26,7 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
-    <DeviceSpecificBuild>false</DeviceSpecificBuild>
+    <DeviceSpecificBuild>true</DeviceSpecificBuild>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -129,14 +129,14 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
-    <PackageReference Include="Xamarin.Swift">
-      <Version>1.0.4</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Build.Download">
       <Version>0.10.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.iOS">
       <Version>2.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
+      <Version>0.2.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
