--- a/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
+++ b/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CobrowseConstants.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
+    <Compile Include="CobrowseIO.cs" />
   </ItemGroup>
   <ItemGroup>
     <NativeReference Include="CobrowseIO.framework">
