--- a/Sample/SampleApp.Android/SampleApp.Android.csproj
+++ b/Sample/SampleApp.Android/SampleApp.Android.csproj
@@ -56,6 +56,7 @@
     <Reference Include="Mono.Android" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
+    <Reference Include="Mono.Android.Export" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.AndroidX.Core">
@@ -67,8 +68,8 @@
     <PackageReference Include="Xamarin.Build.Download">
       <Version>0.10.0</Version>
     </PackageReference>
-    <PackageReference Include="CobrowseIO.Android">
-      <Version>2.2.0</Version>
+    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout">
+      <Version>1.1.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainApplication.cs" />
     <Compile Include="LoginActivity.cs" />
+    <Compile Include="CustomCobrowseActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -125,6 +127,20 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Android\CobrowseIO.Android\CobrowseIO.Android.csproj">
+      <Project>{C6ED4775-5505-4166-B973-D0C88830D32B}</Project>
+      <Name>CobrowseIO.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Android\CborJava.Android\CborJava.Android.csproj">
+      <Project>{442C6F83-FEC1-4CED-A374-3953721D7C13}</Project>
+      <Name>CborJava.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Android\NumbersJava.Android\NumbersJava.Android.csproj">
+      <Project>{CA05EE40-B53A-4284-99E3-4257304D025A}</Project>
+      <Name>NumbersJava.Android</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
