--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -141,9 +141,6 @@
       <PackageReference Include="Xamarin.Build.Download">
         <Version>0.10.0</Version>
       </PackageReference>
-      <PackageReference Include="CobrowseIO.iOS">
-        <Version>2.4.0</Version>
-      </PackageReference>
       <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
         <Version>0.2.0</Version>
       </PackageReference>
@@ -153,6 +150,18 @@
         <IsAppExtension>true</IsAppExtension>
         <Project>{146D2039-84E1-428F-8020-23BA03B56795}</Project>
         <Name>SampleApp.iOS.BroadcastUploadExtension</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\..\iOS\CobrowseIO.iOS\CobrowseIO.iOS.csproj">
+        <Project>{42D519FB-6597-4CFE-A2B5-9F57BADBE925}</Project>
+        <Name>CobrowseIO.iOS</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\..\iOS\Starscream.iOS\Starscream.iOS.csproj">
+        <Project>{E19A722D-20E3-4255-8600-F10EFEFBAC16}</Project>
+        <Name>Starscream.iOS</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\..\iOS\SwiftCBOR.iOS\SwiftCBOR.iOS.csproj">
+        <Project>{89690D1D-E492-4302-A262-1125807A9CF7}</Project>
+        <Name>SwiftCBOR.iOS</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
