--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -132,9 +132,6 @@
     <PackageReference Include="Xamarin.Build.Download">
       <Version>0.10.0</Version>
     </PackageReference>
-    <PackageReference Include="CobrowseIO.iOS">
-      <Version>2.4.0</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
       <Version>0.2.0</Version>
     </PackageReference>
@@ -148,6 +145,18 @@
       <IsAppExtension>true</IsAppExtension>
       <Project>{E8DDF4F8-73CB-42F7-977F-A258F9EDAD62}</Project>
       <Name>SampleFormsApp.iOS.BroadcastUploadExtension</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\iOS\CobrowseIO.iOS\CobrowseIO.iOS.csproj">
+      <Project>{42D519FB-6597-4CFE-A2B5-9F57BADBE925}</Project>
+      <Name>CobrowseIO.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\iOS\SwiftCBOR.iOS\SwiftCBOR.iOS.csproj">
+      <Project>{89690D1D-E492-4302-A262-1125807A9CF7}</Project>
+      <Name>SwiftCBOR.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\iOS\Starscream.iOS\Starscream.iOS.csproj">
+      <Project>{E19A722D-20E3-4255-8600-F10EFEFBAC16}</Project>
+      <Name>Starscream.iOS</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
