Implement generic callback delegate in Android bindings.

--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Additions\CobrowseCallback.cs" />
     <Compile Include="Additions\CobrowseIO.cs" />
     <Compile Include="Additions\CobrowseSessionListener.cs" />
+    <Compile Include="Additions\Session.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
