Implement 6-digits code custom UI using Xamarin.Forms.

--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -73,6 +73,7 @@
     <Compile Include="UIViewControllerExtensions.cs" />
     <Compile Include="PlatformCobrowseRedactedViewEffect.cs" />
     <Compile Include="CobrowseRedactedPageRenderer.cs" />
+    <Compile Include="NSErrorExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
