Implement cross-platform C# wrapper of native Cobrowse.io API.

--- a/XamarinSDK/CobrowseIO.Xamarin.Android/CobrowseIO.Xamarin.Android.csproj
+++ b/XamarinSDK/CobrowseIO.Xamarin.Android/CobrowseIO.Xamarin.Android.csproj
@@ -57,6 +57,8 @@
     <Compile Include="..\CobrowseIO.Xamarin\CrossCobrowseIO.cs">
       <Link>CrossCobrowseIO.cs</Link>
     </Compile>
+    <Compile Include="CobrowseSession.cs" />
+    <Compile Include="CrossCobrowseDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CobrowseIO.Xamarin.Abstractions\CobrowseIO.Xamarin.Abstractions.csproj">
