--- a/Sample/SampleApp.iOS.BroadcastUploadExtension/SampleApp.iOS.BroadcastUploadExtension.csproj
+++ b/Sample/SampleApp.iOS.BroadcastUploadExtension/SampleApp.iOS.BroadcastUploadExtension.csproj
@@ -102,6 +102,9 @@
     <PackageReference Include="CobrowseIO.AppExtension.iOS">
       <Version>2.4.0</Version>
     </PackageReference>
+    <PackageReference Include="SwiftCBOR.iOS">
+      <Version>0.4.3.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.AppExtension.CSharp.targets" />
 </Project>
