--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -69,7 +69,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CobrowseAdapter.cs" />
+    <Compile Include="CustomOverlayCobrowseDelegate.cs" />
     <Compile Include="UIViewControllerExtensions.cs" />
     <Compile Include="PlatformCobrowseRedactedViewEffect.cs" />
     <Compile Include="CobrowseRedactedPageRenderer.cs" />
@@ -136,6 +136,9 @@
     <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
       <Version>0.2.0</Version>
     </PackageReference>
+    <PackageReference Include="CobrowseIO.Xamarin">
+      <Version>3.0.0-pre03</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SampleApp.Forms\SampleApp.Forms.csproj">
@@ -146,18 +149,6 @@
       <IsAppExtension>true</IsAppExtension>
       <Project>{E8DDF4F8-73CB-42F7-977F-A258F9EDAD62}</Project>
       <Name>SampleFormsApp.iOS.BroadcastUploadExtension</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\iOS\CobrowseIO.iOS\CobrowseIO.iOS.csproj">
-      <Project>{42D519FB-6597-4CFE-A2B5-9F57BADBE925}</Project>
-      <Name>CobrowseIO.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\iOS\SwiftCBOR.iOS\SwiftCBOR.iOS.csproj">
-      <Project>{89690D1D-E492-4302-A262-1125807A9CF7}</Project>
-      <Name>SwiftCBOR.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\iOS\Starscream.iOS\Starscream.iOS.csproj">
-      <Project>{E19A722D-20E3-4255-8600-F10EFEFBAC16}</Project>
-      <Name>Starscream.iOS</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
