Implement automatic versioning (assembly & NuGet versions) using Cake script.

--- a/XamarinSDK/CobrowseIO.Xamarin.Abstractions/CobrowseIO.Xamarin.Abstractions.csproj
+++ b/XamarinSDK/CobrowseIO.Xamarin.Abstractions/CobrowseIO.Xamarin.Abstractions.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
     <RootNamespace>Xamarin.CobrowseIO</RootNamespace>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
 </Project>
