--- a/XamarinSDK/CobrowseIO.Xamarin/CobrowseIO.Xamarin.csproj
+++ b/XamarinSDK/CobrowseIO.Xamarin/CobrowseIO.Xamarin.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
     <AssemblyName>CobrowseIO.Xamarin</AssemblyName>
-    <RootNamespace>Xamarin.CobrowseIO</RootNamespace>
+    <RootNamespace>Xamarin.CobrowseIO.Abstractions</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
