--- a/Sample/SampleApp.iOS.BroadcastUploadExtension/SampleApp.iOS.BroadcastUploadExtension.csproj
+++ b/Sample/SampleApp.iOS.BroadcastUploadExtension/SampleApp.iOS.BroadcastUploadExtension.csproj
@@ -99,12 +99,12 @@
     <PackageReference Include="Xamarin.Build.Download">
       <Version>0.10.0</Version>
     </PackageReference>
-    <PackageReference Include="CobrowseIO.AppExtension.iOS">
-      <Version>2.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="SwiftCBOR.iOS">
-      <Version>0.4.3.1</Version>
-    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\iOS\CobrowseIO.AppExtension.iOS\CobrowseIO.AppExtension.iOS.csproj">
+      <Project>{23B1F427-BAA7-47DA-8060-251B09238D78}</Project>
+      <Name>CobrowseIO.AppExtension.iOS</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.AppExtension.CSharp.targets" />
 </Project>
