--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -168,9 +168,6 @@
       <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
         <Version>0.2.0</Version>
       </PackageReference>
-      <PackageReference Include="CobrowseIO.Xamarin">
-        <Version>3.0.0-pre08</Version>
-      </PackageReference>
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\SampleApp.iOS.BroadcastUploadExtension\SampleApp.iOS.BroadcastUploadExtension.csproj">
@@ -178,9 +175,14 @@
         <Project>{146D2039-84E1-428F-8020-23BA03B56795}</Project>
         <Name>SampleApp.iOS.BroadcastUploadExtension</Name>
       </ProjectReference>
-    </ItemGroup>
-    <ItemGroup>
-      <BundleResource Include="Resources\.DS_Store" />
+      <ProjectReference Include="..\..\XamarinSDK\CobrowseIO.Xamarin.iOS\CobrowseIO.Xamarin.iOS.csproj">
+        <Project>{43F32F0B-5068-4AB2-A07E-9108D2646284}</Project>
+        <Name>CobrowseIO.Xamarin.iOS</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\..\iOS\CobrowseIO.iOS\CobrowseIO.iOS.csproj">
+        <Project>{42D519FB-6597-4CFE-A2B5-9F57BADBE925}</Project>
+        <Name>CobrowseIO.iOS</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
