--- a/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
+++ b/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
@@ -68,9 +68,6 @@
     <PackageReference Include="Xamarin.AndroidX.ConstraintLayout">
       <Version>1.1.3</Version>
     </PackageReference>
-    <PackageReference Include="CobrowseIO.Xamarin">
-      <Version>3.0.0-pre08</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -114,6 +111,14 @@
     <ProjectReference Include="..\SampleApp.Forms\SampleApp.Forms.csproj">
       <Project>{28C2AABA-55D8-47E3-9404-1C9C13BFC8E9}</Project>
       <Name>SampleApp.Forms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Android\CobrowseIO.Android\CobrowseIO.Android.csproj">
+      <Project>{C6ED4775-5505-4166-B973-D0C88830D32B}</Project>
+      <Name>CobrowseIO.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\XamarinSDK\CobrowseIO.Xamarin.Android\CobrowseIO.Xamarin.Android.csproj">
+      <Project>{F0A627E6-45D3-446B-A99E-DFE32BBBABAE}</Project>
+      <Name>CobrowseIO.Xamarin.Android</Name>
     </ProjectReference>
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
