--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -136,9 +136,6 @@
     <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
       <Version>0.2.0</Version>
     </PackageReference>
-    <PackageReference Include="CobrowseIO.Xamarin">
-      <Version>3.0.0-pre08</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SampleApp.Forms\SampleApp.Forms.csproj">
@@ -149,6 +146,14 @@
       <IsAppExtension>true</IsAppExtension>
       <Project>{E8DDF4F8-73CB-42F7-977F-A258F9EDAD62}</Project>
       <Name>SampleFormsApp.iOS.BroadcastUploadExtension</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\XamarinSDK\CobrowseIO.Xamarin.iOS\CobrowseIO.Xamarin.iOS.csproj">
+      <Project>{43F32F0B-5068-4AB2-A07E-9108D2646284}</Project>
+      <Name>CobrowseIO.Xamarin.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\iOS\CobrowseIO.iOS\CobrowseIO.iOS.csproj">
+      <Project>{42D519FB-6597-4CFE-A2B5-9F57BADBE925}</Project>
+      <Name>CobrowseIO.iOS</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
