Reference new 3.0.0 NuGet package.

--- a/SampleForms/SampleApp.Forms/SampleApp.Forms.csproj
+++ b/SampleForms/SampleApp.Forms/SampleApp.Forms.csproj
@@ -12,6 +12,6 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
-    <PackageReference Include="CobrowseIO.Xamarin" Version="3.0.0-pre01" />
+    <PackageReference Include="CobrowseIO.Xamarin" Version="3.0.0" />
   </ItemGroup>
 </Project>
