--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -169,7 +169,7 @@
         <Version>0.2.0</Version>
       </PackageReference>
       <PackageReference Include="CobrowseIO.Xamarin">
-        <Version>3.0.0-pre01</Version>
+        <Version>3.0.0</Version>
       </PackageReference>
     </ItemGroup>
     <ItemGroup>
