--- a/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
+++ b/SampleForms/SampleApp.Forms.Android/SampleApp.Forms.Android.csproj
@@ -57,7 +57,7 @@
       <Version>0.10.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.Xamarin">
-      <Version>3.0.0-pre01</Version>
+      <Version>3.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
