--- a/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
+++ b/SampleForms/SampleApp.Forms.iOS/SampleApp.Forms.iOS.csproj
@@ -137,7 +137,7 @@
       <Version>0.2.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.Xamarin">
-      <Version>3.0.0-pre01</Version>
+      <Version>3.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
