Add a cross-platform wrapper of the 'Agent' class.

--- a/XamarinSDK/CobrowseIO.Xamarin.Android/CobrowseIO.Xamarin.Android.csproj
+++ b/XamarinSDK/CobrowseIO.Xamarin.Android/CobrowseIO.Xamarin.Android.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="CobrowseSessionImplementation.cs" />
     <Compile Include="CobrowseDelegateImplementation.cs" />
+    <Compile Include="AgentImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CobrowseIO.Xamarin.Abstractions\CobrowseIO.Xamarin.Abstractions.csproj">
