--- a/CobrowseIO.AppExtension.iOS.nuspec
+++ b/CobrowseIO.AppExtension.iOS.nuspec
@@ -12,6 +12,7 @@
         <iconUrl>https://avatars3.githubusercontent.com/u/32596876</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Cobrowse.io - Xamarin.iOS Broadcast Extension</description>
+        <repository type="git" url="https://github.com/cobrowseio/cobrowse-sdk-xamarin" />
         <tags>xamarin, ios</tags>
         <dependencies>
             <group targetFramework="Xamarin.iOS10">
